--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.3",
+    "react-spring": "^9.7.5",
+    "react-spring-3d-carousel": "^1.3.4",
+    "slick-carousel": "^1.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
